<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPSampleApp</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="library_version">Library version:\u0020</string>
    <string name="latitude">Latitude:\u0020</string>
    <string name="longitude">Longitude:\u0020</string>
    <string name="horizontal_accuracy">Horizontal accuracy:\u0020</string>
    <string name="altitude">Altitude:\u0020</string>
    <string name="altitude_accuracy">Altitude accuracy:\u0020</string>
    <string name="heading">Heading:\u0020</string>
    <string name="heading_accuracy">Heading accuracy:\u0020</string>
    <string name="floor">Floor:\u0020</string>
    <string name="last_error">Last error:\u0020</string>
    <string name="stub_on">Stub On</string>
    <string name="stub_off">Stub Off</string>
    <string name="app_configuration">AQAAAAX8cvM++DNHnh9SB8aTZ9h3d3cuc2RrLmV1LnllbGxvd2RvdC5saWdodGluZy5jb20AAAAAAAAAAAAAAMiDJaEBAAAAAQAAAAAAAAAwzdZvAQAAAJBohYIBAAAAAQAAAAAAAADIp/ZfAQAAALCn9l8BAAAAAQAAAAAAAABwzdZvAQAAAEBOc4IBAAAA8IT1XwEAAACAXY+cAQAAANjN1m8BAAAAAQAAAAAAAADAMTuIAQAAALCn9l8BAAAAMNbWbwEAAAAI2hmDAQAAAIBF918BAAAAAAYAAAAAAAAAAAAAAAAAAAIAAAAAAAAAXIb1XwEAAABwAAAAAAAAAGgAAAAAAAAAAMpWAAEAAAACAAAAbgsAADCCC2oCAQMwggsmBgkqhkiG9w0BBwGgggsXBIILEzCCCw8wggYIBgkqhkiG9w0BBwGgggX5BIIF9TCCBfEwggXtBgsqhkiG9w0BDAoBAqCCBP4wggT6MBwGCiqGSIb3DQEMAQMwDgQIPMHbr4SNLicCAgfQBIIE2P0ui7lCQbQFVjf0JMk9H/Ie1x09QZ+HYft3TZKuEV4d0Pqs1InHw9QeRobr7UOieqtjA5HODvJnpMjvnruczk3es0RBqtXJZpgtmyZcogcUcuKNsFupTC1GyqbCjTJnjG09Zw+xSiy/XNdRz2ZlhVO6S+V884xD8Uhalh0GeD0fc+T2NSCEKvsVrL7gUQFBen1jiMAu0Y+4iqvMleT14iXDS0clojIqW0ihYYQF5/a4E4MJu3P0fo24eqmqaJMG7+7MovjECyLHuVS8UCMyfkj/1plOea4gBfgFplA+PDp6qDz6i5iRVMmAQHOMZ6Rnzs4kwo+uPSjyW/bFL00V5cdC6BY/hPy3SkNgsYcGV0yoptcUfWaQRxQcvkY52VK46nMgZ+ozImT/N3g4R8lRv5v8HfzbTIkCRZfpJGO7sB2hjj1PTKgUI7t2mEmhMf7LvcZLRJ93aDmjLi9v3IeK3LDB/Wnj8erJ68R6P2jZOTzy+ZF0EoAQkPkpLEPF0/aM0I5KVQHfS1WkuQC+Q8MemcWuSY6Our5T8czWhX4lblMXqvaeFcqGtTORB1rX6gPkkWFXvJ7qlSGlxlFTig13pneuwmwVYkdHSYJRRzFKxr9lY3vZrXdTgpafsa2vU5ouRmvQ2m5vClFLIdgezrwe55bkDJ5qBh3ERn4AhTeyLoHMbzTo5ugN3hG49Uvre8T7cLxQp62of0vLuy+79697QACIARX8xXSwrTNAdipdmEVJWviQddAQ1WeS++dxpl1T4tv8P//qpRZ/7WQeFtaXWY//xvrHkdUxCh7nW7srymSwHBXSZaWYxRcFDjA5cV1bLE1dQKBIvm8sNNfaiPdA8A7naxPVu9auvAnImWaBrCuBhP/9oWiIvLegGbinsOlR5ZmAMuHYbFUJmqMTSZKNY4xfiBKd64r94WXoBmSuEMyrhMzoQmuGNkOj506LGCq13sRPeCdfJSz5ypLkgeo74cAOUAxAxsZe+0F0ywfyjYjiw9in6HLUiXfLvYVgZRaXX1zUQxj2i0Q21+gefFngZpj+IRcMWEhFdVvzUKJOAdd+8jF6owoDQLBOS/QIh9QGsXRY7W8But+/Y8qaye4YzFZlXMRZ0O+dRY/BMe4M6F89JPJceHhPn3O1YYD7wrmrRQ4VZEGyXcK3p7mubhUSy6zRMuWqu2pkQxSGZje3wr/10A+pan7mh8Acu/gkI/xVSkbqXojleDwyyH+mY9fdr7wXX2YfVQrcXMraI9bRBxtCLqJeEb6RuR+cDTJIAkfVB8QCOgpsg8EvT6xdCd9+5okxw44Xs110CZfo5hiQ0kamb7rA23RkRpguUn552uFHny1GeQ3KeNCMqPQxKkVHJkdEhiMI8HrAr5NOOHArQoZk8b/StM49ejNEfysa/56HD7I+S8K6PZSlOVpKtdMXSxW5I8Xa/0GvzmYJuo+gqxbv1dqtGiZwxRO52VeKp6H54eIp3OJkt6eYpHqElDS3l4Cz7x4UmVjJIeiMnUJlYicye4Z9VRG5ddE7AzdN8GEYxFu6rKyw5wmSYuRid2EXgne8EAFdaiyugnHcO7A8OJnp9avC37r85eJI/sX2aR3uIgT7dX88D4PJSrN1lPx1YquGLG9g339TVnpI/9SP8+z5DU0eC/DJhFUxgdswEwYJKoZIhvcNAQkVMQYEBAEAAAAwXQYJKwYBBAGCNxEBMVAeTgBNAGkAYwByAG8AcwBvAGYAdAAgAFMAdAByAG8AbgBnACAAQwByAHkAcAB0AG8AZwByAGEAcABoAGkAYwAgAFAAcgBvAHYAaQBkAGUAcjBlBgkqhkiG9w0BCRQxWB5WAFAAdgBrAFQAbQBwADoAYwAzAGMAOAAxAGQAYgAzAC0AOQBmADMAYQAtADQANwA5ADUALQBiAGMAMgAyAC0AYQAyADgAMABhAGEAMQBlADgAOABhAGEwggT/BgkqhkiG9w0BBwagggTwMIIE7AIBADCCBOUGCSqGSIb3DQEHATAcBgoqhkiG9w0BDAEGMA4ECEBLD50ijrA8AgIH0ICCBLhyQsjccmmdAFg8HTzwuc1XJ4r+JjmWIrecgmkmftk0gCw0L6FTITDPUfu8JY/Adj3lpy90vV3NUos0hCfATxwCyXpxC/P5UI7jzJVxSJ8tnQj2/qJbg+3LvFJqQ0BozDpvLcuDT7Vs1UKBKiD49OM5Abb+OnDvfYMQHpYFjCV4PQ97VLy3xnvKIRwUbssoVfVvGOwciSKcqrcNIcEvK1PrrjIpvp4W2SbmXSqIzaTH6SYNxlKeUSamiOXDQx8tGCFQQa3AkA8xRGJIKiOzhVhA1r71pPu4nvK06Sft/1F+vh1Rgi45VAuYtvpIfi51x0PoVmOfupN7vgfq4Gw3t1i/kSmatcvPBcw/jdY5lM2D7zsHgrjyrgi593aZuwP0zdamG9fSt9hkKZgcrJIVCCLzQ+RSW3avLbDXUZF5P5IrS2yGYNOXL+/2nz7JRkKpoIUCbh79IquLNVJbgh0L1ptcvMBmUxR58xvWsmI8JS21gODq3sz+PFU7rTyEpj0a91UXMqb6wVXzaazlXsXbKHqLnHloqPbtTjqT6tV8ywyFF9ofM6Qa/PqqKSG4JO2jCp2CesT3MoMgQEmcjBb1dAKvd/MPlI/50g0jS4Cs0ZlK5IVxpfgjIX1cz6I5l4rZPoCKBpOmTKpPBb6cIVANKW87+pX5G6S6YaacmPPEN8yLS37+E61WcgHl67lweW9ra5XYXWZEyU8cp33nsqVH6R4/Q1ZIanEMnMP10nHfSy01sDzkWkeIBOYxbbpwv6je9QTC/gfyiogXtWZ3ZFC/xPP8ZY74+uJjjZRuYQXhXd/LzpXKW6JV3i/z6aN372sWQXiiDFd99mU44Xuupa+yTOg91ffnj/hS2EfECXLWdMUD2ULc4GkBQMF7kEneG0/O/RczUT0TE0s2XosK03WneX6GQnlEA6xgwFNCpBSpac2JHBcV/Ckr7luTnpg2EzeoWildYIoNvuSR1I+Y2/zvJPKcyUQfTwq9W1ybe5mZBaDlnUhb9al/5QR80lam5KDJaJ8+POo0qTR70IkKqWMBD2dZ88bLSBDBRMgyPtymeT4bwSar7/P6R5s+7yRHLRBUXogB+0CSyG5icPji8XO+5/pSOEugC2ACqynLWKWPp+/b6H4i1vGfk593SXX7LvT02+sXYb6CN/qBzcqPhfdyeE3WREVaFZp8FYOw9Dc/6izqXOxE7LjrpCtPp+MBxmNiHt2EppngppIe/rF1gW+phPKKIaNlmFV6Qaltho/aTVwa5q9mvl/F1pV/Tt+8bI+3Mo7tC+xI2lhccXZMGo2rWkW3Rii3KZtn+RcW6GunaCy1BdFKlnFbddYN05Zbe3SiLwq7F871xwhJTdtZKRLvtwA1q7Zd1G3oHKpogfzOX/anS7ppU/5P7AHyPexPRe105vWKeSB/J+5yW+Mmg+sRJ4jQsETYY9g1SmwZdoxLlCYc+OqnlDfwabHZJP6tdaLuCc2AuYqOKwrUu+cdZgpZUsMZXEDj/QTj3wo/D6Yo5Ksh3LlzCtyspY35zqMyh4ilQWSYyX1417i/NKFQk7JHdtcYqW4wdKXBgsYKph0Zrd4Vt5Vcypv1jpsnusxFwB3p+gsMu5Wz8Dz0ITA7MB8wBwYFKw4DAhoEFHD15qpo61RkYpH2lcOjP5sPLKtHBBQVLgrSom3fV985Qo0aZzwrPW8edQICB9AAADDyBiABAAAAPwAAAAAAAACQNVACAQAAABjJ7IEBAAAAeF3sgQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8HZAAAAAAAAAAAAAAAAAAABHQAAAAAAAAAAAQAAAAAAAAAAEAAAAAAAAAACAFgABAAAAfM33XwEAAAAMAAAAAAAAAAQAAAAAAAAAENvWbwEAAAAMIEGCAQAAAAEAAAAAAAAAAAAAAAAAAABoESWhAQAAAAG3QAAAAAAAYNrWbwEAAACEESWhAQAAAIgRJaEBAAAAAMpWAAEAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAEAAAAAAAAAACAFgABAAAAfM33XwEAAAABAAAAAAAAAAQAAAAAAAAAQAAAAAAAAAAMIEGCAQAAAADUVgABAAAADPXrgQEAAABoESWhAQAAANhRJqEBAAAAAAAAAAAAAAAAAAAAAAAAAEBe7IEBAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAwFEmoQEAAABAAAAAAAAAAAEAAAAAAAAAAIAWAAEAAABA29ZvAQAAADBZQYIBAAAAwFEmoQEAAAAEAAAAAAAAAEAAAAAAAAAAAQAAAAAAAABoESWhAQAAAAG7QAAAAAAAuD7tgQEAAACEESWhAQAAAIgRJaEBAAAAgBEloQEAAAAAAAAAAAAAAAAAAAAAAAAAQF7sgQEAAAAAAAAAAAAAACAQJaEBAAAAbOrsgQEAAABoESWhAQAAALBRJqEBAAAA/iA7iAEAAADgwfdfAQAAAPDb1m8BAAAADPXrgQEAAABoESWhAQAAALBRJqEBAAAA/iA7iAEAAADgwfdfAQAAAFDc1m8BAAAAsLnrgQEAAAAAAAAAAAAAABgAAAAAAAAAaBEloQEAAAABvEAAAAAAAAAAAAAAAAAAhBEloQEAAACIESWhAQAAAIARJaEBAAAAAAAAAAAAAAAAAAAAAAAAAEBe7IEBAAAAAAAAAAAAAACwLBAAAQAAAAzYCQABAAAAaBEloQEAAACwLBAAAQAAAHTDP4gBAAAA0D/TXwEAAADA3NZvAQAAAAz164EBAAAAaBEloQEAAACwLBAAAQAAAHTDP4gBAAAA0D/TXwEAAAAg3dZvAQAAALC564EBAAAAAAAAAAAAAAAYAAAAAAAAAAEAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAACwYKABAAAAGh87iAEAAACsHDuIAQAAAKDd9V8BAAAA8BMpoQEAAAAA3tZvAQAAAHhd7IEBAAAA0J33XwEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPB2QAAAAAAAAAAAAAAAAAAAR0AAAAAAAAAAAAAAAAAAAD5AAAAAAAAAAADQP9NfAQAAAHTDP4gBAAAA4MH3XwEAAAA=</string>

</resources>